// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete workflow common handler Fail scenarios should fail if deletion with wf name failed 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [],
}
`;

exports[`Delete workflow common handler Fail scenarios should fail if deletion with wf name failed 2`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fake-workflow-key",
    },
    {
      "workflowKey": "fake-workflow-key2",
    },
  ],
}
`;

exports[`Delete workflow common handler process method should delete a workflow using workflow name 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fake-workflow-key",
    },
    {
      "workflowKey": "fake-workflow-key2",
    },
  ],
}
`;
